<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_perfil"
            android:title="@string/cuenta" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_estrella"
            android:title="@string/mis_favoritos" />

        <item
            android:id="@+id/nav_conf"
            android:icon="@drawable/ic_configuracion"
            android:title="@string/configuracion" />

        <item
            android:id="@+id/nav_sugerencia"
            android:icon="@drawable/ic_sugerencia"
            android:title="@string/sugerencia" />
        <item
            android:id="@+id/nav_acerca"
            android:icon="@drawable/ic_info"
            android:title="@string/acerca_de_nature_heal" />
        <item
            android:id="@+id/nav_cerrar"
            android:icon="@drawable/ic_cerrar"
            android:title="@string/cerrar_sesion" />
    </group>


</menu>
