<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registro2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.greciaguzmn.natureheal.Registro2Activity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/paso2" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginStart="14dp"
        android:layout_marginTop="99dp"
        android:text="@string/alergias" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_marginStart="22dp"
        android:layout_toEndOf="@+id/textView10" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/spinner2"
        android:layout_alignTop="@+id/textView10" />

    <Button
        android:id="@+id/botonReg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="53dp"
        android:layout_marginEnd="50dp"
        android:text="@string/siguiente" />

    <Button
        android:id="@+id/boton2Reg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/botonReg2"
        android:layout_alignBottom="@+id/botonReg2"
        android:layout_toEndOf="@+id/textView10"
        android:text="@string/omitir" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imagelogo1"
        android:layout_toStartOf="@+id/imagelogo1"
        android:text="@string/appname" />

    <ImageView
        android:id="@+id/imagelogo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_marginStart="16dp"
        android:layout_marginTop="49dp"
        android:layout_toEndOf="@+id/boton2Reg2"
        app:srcCompat="@drawable/ic_leaf" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinner2"
        android:layout_marginTop="36dp"
        android:text="@string/alimientos" />

</RelativeLayout>
